tests/baselines/reference/commaOperatorWithoutOperand.errors.txt
==== tests/cases/conformance/expressions/commaOperator/commaOperatorWithoutOperand.ts (12 errors) ====
    var ANY: any;
    var BOOLEAN: boolean;
    var NUMBER: number;
    var STRING: string;
    var OBJECT: Object;
    
    // Expect to have compiler errors
    // Missing the second operand
    (ANY, );
          ~
!!! error TS1109: Expression expected.
    (BOOLEAN, );
              ~
!!! error TS1109: Expression expected.
    (NUMBER, );
             ~
!!! error TS1109: Expression expected.
    (STRING, );
             ~
!!! error TS1109: Expression expected.
    (OBJECT, );
             ~
!!! error TS1109: Expression expected.
    
    // Missing the first operand
    (, ANY);
     ~
!!! error TS1109: Expression expected.
    (, BOOLEAN);
     ~
!!! error TS1109: Expression expected.
    (, NUMBER);
     ~
!!! error TS1109: Expression expected.
    (, STRING);
     ~
!!! error TS1109: Expression expected.
    (, OBJECT);
     ~
!!! error TS1109: Expression expected.
    
    // Missing all operands
    ( , );
      ~
!!! error TS1109: Expression expected.
        ~
!!! error TS1109: Expression expected.